client/scss/base/_forms.scss
input[type=text],
input[type=url],
input[type=tel],
input[type=number],
input[type=color],
input[type=email],
input[type=password],
input[type=button],
input[type=reset],
input[type=submit],
button,
textarea {
  -webkit-appearance: none;
  border: none;
  border: {
    radius: 0;
  }
}

input[type=text],
input[type=url],
input[type=tel],
input[type=number],
input[type=color],
input[type=email],
input[type=password] {
  border: {
    bottom: 1px solid $black;
  }

  &:focus {
    outline: none;
    border: {
      bottom: {
        color: $blue !important;
      }
    }
  }

  &.ng-dirty.ng-invalid, &.invalid {
    border: {
      bottom: {
        color: $red;
      }
    }
  }
}

input[type=button],
button {
  @extend %button;
}

input[type=submit],
button[type=submit] {
  @extend %button-submit;
}

input[type=reset],
button[type=reset] {
  @extend %button-reset;
}

textarea {
  @include font-details($height: 1.5);

  background: {
    image: url('/img/bg/textarea.png');
  }
  resize: none;

  &:focus {
    outline: none;
    background: {
      image: url('/img/bg/textarea--focus.png') !important;
    }
  }

  &.ng-dirty.ng-invalid, &.invalid {
    background: {
      image: url('/img/bg/textarea--invalid.png');
    }
  }
}

